--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Yuamble</title>
+    <meta name="description" content="Yuamble - an open source global cryptocurrency and decentralized platform.">
     <link rel="stylesheet" href="stylesheet.css">
     <script src="main.js" rel="script"></script>
     <link rel="shortcut icon" href="assets/images/logo-icon.ico" type="image/x-icon">
