--- a/ru/index.html
+++ b/ru/index.html
@@ -183,7 +183,7 @@
             </ul>
         </div>
         <div style="margin-right: 60px; display: block">
-            <a class="h3">Learn</a>
+            <a class="h3">Обучение</a>
             <ul>
                 <li class="li-footer"><a>Что такое Yuamble?</a></li>
                 <li class="li-footer"><a>Что такое Yuamba (YMB)</a></li>
