--- a/ru/index.html
+++ b/ru/index.html
@@ -71,20 +71,20 @@
         </div>
         <img src="../assets/n5m5knWRx31r04068o1.png" style="margin-right: 75px">
     </div>
-
+    
     <div class="block3">
         <div class="block3-in">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-dark-1">В этом блокчейне нет комиссии. Даже скрытых</a>
                 <br><br>
-                <a class="h2-dark-2">Мы хотим упростить, а не усложнить проведение вами транзакций с вашим аккаунтом. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
+                <a class="h2-dark-2">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунтом. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
                 <br>
                 <button class="button-2">Что такое блокчейн?</button>
             </div>
             <img class="image-2" src="../assets/6219.png">
         </div>
     </div>
-
+    
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="../assets/039bf262699271.5a986c977466f.png">
