--- a/ru/index.html
+++ b/ru/index.html
@@ -77,7 +77,7 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-dark-1">В этом блокчейне нет комиссии. Даже скрытых</a>
                 <br><br>
-                <a class="h2-dark-2">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунтом. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
+                <a class="h2-dark-2">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунте. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
                 <br>
                 <button class="button-2">Что такое блокчейн?</button>
             </div>
