--- a/ru/index.html
+++ b/ru/index.html
@@ -6,6 +6,7 @@
     <meta name="Description" content="Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений." data-react-helmet="true">
     <meta name="author" content="yuamble.org">
     <meta name="keywords" content="юамбль, юамба, блокчейн, криптовалюта, крипто, валюта">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Главная | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Главная | Yuamble">
