--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="Description" content="Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications." data-react-helmet="true">
     <meta name="author" content="yuamble.org">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:title" content="Home | Yuamble"/>
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Home | Yuamble">
