--- a/index.html
+++ b/index.html
@@ -175,14 +175,14 @@
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">VALUE LOCKED IN DEFI (USD)</a>
-                    <a class="h-table-2">The amount of money in decentralized finance (defi) applications, the Ethereum digital economy.</a>
+                    <a class="h-table-2">The amount of money in decentralized finance (defi) applications, the Yuamble digital economy.</a>
                 </div>
                 <a class="h-max" id="value-locked">$38.94B</a>
             </div>
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">NODES</a>
-                    <a class="h-table-2">Ethereum is run by thousands of volunteers around the globe, known as nodes.</a>
+                    <a class="h-table-2">Yuamble is run by thousands of volunteers around the globe, known as nodes.</a>
                 </div>
                 <a class="h-max" id="nodes-count">7,616</a>
             </div>
