--- a/ru/index.html
+++ b/ru/index.html
@@ -163,7 +163,7 @@
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">YMB ЦЕНА (USD)</a>
-                    <a class="h-table-2">The latest price for 1 yuamba. You can buy as little as 0.000000000000000001 – you don't need to buy 1 whole YMB.</a>
+                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0,000000000000000001 - вам не нужно покупать 1 весь YMB.</a>
                 </div>
                 <a class="h-max" id="ymb-price">$1,496</a>
             </div>
