--- a/ru/index.html
+++ b/ru/index.html
@@ -96,7 +96,7 @@
         <div class="block-get-started-in-text">
             <a class="h1-1">Начнем</a>
             <br><br>
-            <a class="h2-2">yuamble.org — это ваш портал в мир Yuamble. Технология новая и постоянно развивается. Вот руководство — мы рекомендуем вам прочитать, если вы хотите погрузиться.</a>
+            <a class="h2-2">yuamble.org — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите узнать больше про Yuamble? Вот что мы рекомендуем вам просмотреть, если вы хотите погрузиться. 👇</a>
         </div>
         <img class="image-get-started" src="../assets/n5m5knWRx31r04068o1.png">
     </div>
@@ -144,9 +144,9 @@
         <div class="block2-in">
             <img class="image-1" src="../assets/0807d562699271.5a986c977528a.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Инвестиции в Yuamble очень перспективны</a>
+                <a class="h1-1">Yuamble - перспективная криптовалюта</a>
                 <br><br>
-                <a class="h2-2">Инвестируйте в Yuamble, ведь любая интересная криптовалюта может поднять свою цену и увеличить капитализацию.</a>
+                <a class="h2-2">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов.</a>
                 <br>
                 <button class="button-2">Получить Yuamble</button>
             </div>
@@ -175,7 +175,7 @@
             </div>
             <div style="margin: 40px 50px;">
                 <a class="h1-dark-1">Получить Yuamble</a> <br><br>
-                <a class="h2-dark-2">YMB - это валюта Yuamble, которую можно использовать в приложениях.</a>
+                <a class="h2-dark-2">YMB - это валюта Yuamble, которую можно использовать в децентрализованных приложениях.</a>
             </div>
         </div>
     </div>
@@ -186,7 +186,7 @@
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">YMB ЦЕНА (USD)</a>
-                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0.000000000000000001 - вам не нужно покупать 1 весь YMB.</a>
+                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0.000000000000000001 - вам не нужно покупать целый YMB.</a>
                 </div>
                 <a class="h-max" id="ymb-price">$0</a>
             </div>
@@ -206,8 +206,8 @@
             </div>
             <div class="table-in">
                 <div style="display: grid;">
-                    <a class="h-table-1">УЗЛЫ</a>
-                    <a class="h-table-2">Юамблем управляют тысячи добровольцев по всему миру, известных как узлы.</a>
+                    <a class="h-table-1">НОДЫ</a>
+                    <a class="h-table-2">Юамблем управляют тысячи добровольцев по всему миру, известных как ноды (узлы).</a>
                 </div>
                 <a class="h-max" id="nodes-count">0</a>
             </div>
@@ -218,7 +218,7 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-1">Сделайте вклад в yuamble.org</a>
                 <br><br>
-                <a class="h2-2">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете предлагать изменения к любому контенту на этом сайте, предлагать потрясающие новые функции или помогать нам устранять ошибки.</a>
+                <a class="h2-2">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете предлагать изменения к любому контенту на этом сайте, предлагать новые функции или помогать нам устранять ошибки.</a>
                 <br>
                 <button class="button-3">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" id="button-github" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
