--- a/ru/index.html
+++ b/ru/index.html
@@ -146,7 +146,7 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-1">Yuamble - перспективная криптовалюта</a>
                 <br><br>
-                <a class="h2-2">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов.</a>
+                <a class="h2-2">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов. Узнайте вместе с нами, как получить Yuamble.</a>
                 <br>
                 <button class="button-2">Получить Yuamble</button>
             </div>
