--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/assets/favicon-48x48.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://yuamble.org/assets/favicon-48x48.ico" type="image/x-icon">
+    <link rel="icon" href="https://yuamble.org/assets/favicon-48x48.ico">
+    <link rel="shortcut icon" href="https://yuamble.org/assets/favicon-48x48.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
