--- a/ru/index.html
+++ b/ru/index.html
@@ -14,8 +14,8 @@
     <meta property="og:description" content="Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="../stylesheet.css">
-    <link rel="icon" href="https://yuamble.org/favicon.ico" type="image/x-icon">
-    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="https://yuamble.org/favicon.ico">
+    <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
 </head>
 <body>
 <div style="margin: 0px auto; max-width: 1450px;">
