--- a/ru/index.html
+++ b/ru/index.html
@@ -52,6 +52,11 @@
             <a class="menu-mobile-text">Пользование Yuamble</a>
             <a class="menu-mobile-text">Обучение</a>
             <a class="menu-mobile-text">Разработчикам</a>
+            <div style="display: flex;">
+                <a class="menu-mobile-text" href="">EN</a>
+                <div style="width: 20px;"></div>
+                <a class="menu-mobile-text" href="ru">RU</a>
+            </div>
             <div>
                 <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -144,7 +149,7 @@
         <div class="block2-in">
             <img class="image-1" src="../assets/0807d562699271.5a986c977528a.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Yuamble - перспективная криптовалюта</a>
+                <a class="h1-1">Yuamble — перспективная криптовалюта</a>
                 <br><br>
                 <a class="h2-2">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов. Узнайте вместе с нами, как получить Yuamble.</a>
                 <br>
@@ -175,7 +180,7 @@
             </div>
             <div style="margin: 40px 50px;">
                 <a class="h1-dark-1">Получить Yuamble</a> <br><br>
-                <a class="h2-dark-2">YMB - это валюта Yuamble, которую можно использовать в децентрализованных приложениях.</a>
+                <a class="h2-dark-2">YMB — это валюта Yuamble, которую можно использовать в децентрализованных приложениях.</a>
             </div>
         </div>
     </div>
@@ -186,7 +191,7 @@
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">YMB ЦЕНА (USD)</a>
-                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0.000000000000000001 - вам не нужно покупать целый YMB.</a>
+                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0.000000000000000001 — вам не нужно покупать целый YMB.</a>
                 </div>
                 <a class="h-max" id="ymb-price">$0</a>
             </div>
