--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
                     font-size: 18px;
                     color: #242424;
                     font-weight: 400;
-                    text-decoration: none" href="">English</a></li>
+                    text-decoration: none" href="./">English</a></li>
                     <li class="dropdown_item_in"><a style="
                     font-family: system-ui, 'Rubik Light', 'Balgin Light Sm Condensed', 'Rubik Light', serif;
                     font-size: 18px;
                     color: #242424;
                     font-weight: 400;
-                    text-decoration: none" href="ru">Русский</a></li>
+                    text-decoration: none" href="./ru">Русский</a></li>
                 </ul>
             </div>
             <div class="menu-button">
@@ -54,9 +54,9 @@
             <a class="menu-mobile-text">Developers</a>
             <!-- <div style="display: flex; padding-top: 10px; padding-bottom: 10px; padding-right: 15px; padding-left: 15px; border: solid 1px#d9e021; width: fit-content;"> -->
             <div style="display: flex;">
-                <a class="menu-mobile-text" href="">EN</a>
+                <a class="menu-mobile-text" href="./">EN</a>
                 <div style="width: 20px;"></div>
-                <a class="menu-mobile-text" href="ru">RU</a>
+                <a class="menu-mobile-text" href="./ru">RU</a>
             </div>
             <div>
                 <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
