--- a/ru/index.html
+++ b/ru/index.html
@@ -35,13 +35,13 @@
                     font-size: 18px;
                     color: #242424;
                     font-weight: 400;
-                    text-decoration: none" href="">English</a></li>
+                    text-decoration: none" href="../">English</a></li>
                     <li class="dropdown_item_in"><a style="
                     font-family: system-ui, 'Rubik Light', 'Balgin Light Sm Condensed', 'Rubik Light', serif;
                     font-size: 18px;
                     color: #242424;
                     font-weight: 400;
-                    text-decoration: none" href="ru">Русский</a></li>
+                    text-decoration: none" href="./">Русский</a></li>
                 </ul>
             </div>
             <div class="menu-button">
@@ -53,9 +53,9 @@
             <a class="menu-mobile-text">Обучение</a>
             <a class="menu-mobile-text">Разработчикам</a>
             <div style="display: flex;">
-                <a class="menu-mobile-text" href="">EN</a>
+                <a class="menu-mobile-text" href="../">EN</a>
                 <div style="width: 20px;"></div>
-                <a class="menu-mobile-text" href="ru">RU</a>
+                <a class="menu-mobile-text" href="./">RU</a>
             </div>
             <div>
                 <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
