--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
         <div class="block2-in">
             <img class="image-1" src="assets/0807d562699271.5a986c977528a.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Investing in Yuamble is very promising</a>
+                <a class="h1-1">Yuamble is a promising cryptocurrency</a>
                 <br><br>
-                <a class="h2-2">Invest in Yuamble, as any interesting cryptocurrency can raise its price and increase its capitalization.</a>
+                <a class="h2-2">Yuamble is a very promising cryptocurrency and offers great opportunities in the field of blockchain and decentralized finance. Find out with us how to get Yuamble.</a>
                 <br>
                 <button class="button-2">Get Yuamble</button>
             </div>
