--- a/index.html
+++ b/index.html
@@ -265,7 +265,9 @@
         </div>
     </div>
     <div class="update-links">
-        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: white;">Website last updated: March 6, 2021</a></div>
+        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: white;">
+            Website last updated: September 9, 2021</a>
+        </div>
         <div>
             <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                 <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -288,7 +290,7 @@
                 <li class="li-footer"><a>Yuamble Wallets</a></li>
                 <li class="li-footer"><a>Get Yuamble</a></li>
                 <li class="li-footer"><a>Decentralized applications (dapps)</a></li>
-                <li class="li-footer"><a>Stake Yuamble</a></li>
+                <!-- <li class="li-footer"><a>Stake Yuamble</a></li> -->
             </ul>
         </div>
         <div class="footer-div">
