--- a/ru/index.html
+++ b/ru/index.html
@@ -263,7 +263,8 @@
         </div>
     </div>
     <div class="update-links">
-        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: white;">Последнее обновление сайта: 6 марта 2021</a></div>
+        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: white;">
+            Последнее обновление сайта: 9 сентября 2021</a></div>
         <div>
             <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                 <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -286,7 +287,7 @@
                 <li class="li-footer"><a>Yuamble кошельки</a></li>
                 <li class="li-footer"><a>Получить Yuamble</a></li>
                 <li class="li-footer"><a>Децентрализованные приложения (dapps)</a></li>
-                <li class="li-footer"><a>Стейкинг Yuamble</a></li>
+                <!-- <li class="li-footer"><a>Стейкинг Yuamble</a></li> -->
             </ul>
         </div>
         <div class="footer-div">
