--- a/ru/index.html
+++ b/ru/index.html
@@ -84,7 +84,7 @@
                 <ul class="ul-word">
                     <li>Yuamble</li>
                     <li>Юамбль</li>
-                    <li>ϊουαιμπλ</li>
+                    <li>γιούαμβλ</li>
                     <li>यूएमबीएल</li>
                     <li>ಉಆಮಬೞ</li>
                     <li>قمار</li>
