--- a/index.html
+++ b/index.html
@@ -75,17 +75,17 @@
         </div>
     </div>
     <div class="block1">
-        <div>
+        <!-- <div>
             <img class="logo-image-div-device" id="logo-image-div2-device" src="assets/images/Yuamble_2021_logo.svg">
             <img class="logo-image-div" id="logo-image-div1" src="assets/images/Yuamble_2021.svg">
             <img class="logo-image-div" id="logo-image-div2" src="assets/images/Yuamble_2021_logo.svg">
-        </div>
+        </div> -->
         <div id="text-h1-block1">
             <a class="h1">Welcome to <div class="animation">
                 <ul class="ul-word">
                     <li>Yuamble</li>
                     <li>Юамбль</li>
-                    <li>ϊουαιμπλ</li>
+                    <li>γιούαμβλ</li>
                     <li>यूएमबीएल</li>
                     <li>ಉಆಮಬೞ</li>
                     <li>قمار</li>
