--- a/ru/index.html
+++ b/ru/index.html
@@ -74,11 +74,11 @@
         </div>
     </div>
     <div class="block1">
-        <div>
+        <!-- <div>
             <img class="logo-image-div-device" id="logo-image-div2-device" src="../assets/images/Yuamble_2021_logo.svg">
             <img class="logo-image-div" id="logo-image-div1" src="../assets/images/Yuamble_2021.svg">
             <img class="logo-image-div" id="logo-image-div2" src="../assets/images/Yuamble_2021_logo.svg">
-        </div>
+        </div> -->
         <div id="text-h1-block1">
             <a class="h1">Добро пожаловать в <div class="animation">
                 <ul class="ul-word">
