--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <br><br>
                 <a class="h2-dark-2">With the Directed Acyclic Graph (DAG), the Yuamble blockchain processes transactions hundreds of times faster than Bitcoin or Ethereum.</a>
                 <br>
-                <button class="button-2">More about DAG</button>
+                <button class="button-2">More about technology</button>
             </div>
             <img class="image-2 desktop-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
         </div>
