--- a/ru/index.html
+++ b/ru/index.html
@@ -153,7 +153,7 @@
                 <br><br>
                 <a class="h2-2">Протокол Yuamble использует схему одноразовой подписи Винтерница (W-OTS), основанную на квантово-устойчивых хэш-функциях.</a>
                 <br>
-                <button class="button-2">More about features</button>
+                <button class="button-2">Больше о технологии</button>
             </div>
         </div>
     </div>
@@ -166,7 +166,7 @@
                 <br><br>
                 <a class="h2-dark-2">С помощью направленного ациклического графа (DAG) блокчейн Yuamble обрабатывает транзакции в сотни раз быстрее, чем Биткоин или Эфириум.</a>
                 <br>
-                <button class="button-2">Больше про DAG</button>
+                <button class="button-2">Больше о технологии</button>
             </div>
             <img class="image-2 desktop-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
         </div>
