--- a/ru/index.html
+++ b/ru/index.html
@@ -28,21 +28,10 @@
                 <a href="../ru/developers" class="h-menu">Разработчикам</a>
             </div>
             <div class="hat_text">
-                <a id="hat"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="icon-lang" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path></svg></a>
-                <ul class="dropdown_items">
-                    <li class="dropdown_item_in"><a style="
-                    font-family: system-ui, 'Rubik Light', 'Balgin Light Sm Condensed', 'Rubik Light', serif;
-                    font-size: 18px;
-                    color: #242424;
-                    font-weight: 400;
-                    text-decoration: none" href="../">English</a></li>
-                    <li class="dropdown_item_in"><a style="
-                    font-family: system-ui, 'Rubik Light', 'Balgin Light Sm Condensed', 'Rubik Light', serif;
-                    font-size: 18px;
-                    color: #242424;
-                    font-weight: 400;
-                    text-decoration: none" href="./">Русский</a></li>
-                </ul>
+                <a id="hat" class="h-menu languages-text" href="/languages">
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="icon-lang" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path></svg>
+                    Языки
+                </a>
             </div>
             <div class="menu-button">
                 <div class="menu-button-burger"></div>
@@ -52,11 +41,7 @@
             <a class="menu-mobile-text">Пользование Yuamble</a>
             <a class="menu-mobile-text">Обучение</a>
             <a class="menu-mobile-text">Разработчикам</a>
-            <div style="display: flex;">
-                <a class="menu-mobile-text" href="../">EN</a>
-                <div style="width: 20px;"></div>
-                <a class="menu-mobile-text" href="./">RU</a>
-            </div>
+            <a class="menu-mobile-text">Языки</a>
             <div>
                 <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -73,35 +58,29 @@
             </div>
         </div>
     </div>
-    <div class="block1">
-        <!-- <div>
-            <img class="logo-image-div-device" id="logo-image-div2-device" src="../assets/images/Yuamble_2021_logo.svg">
-            <img class="logo-image-div" id="logo-image-div1" src="../assets/images/Yuamble_2021.svg">
-            <img class="logo-image-div" id="logo-image-div2" src="../assets/images/Yuamble_2021_logo.svg">
-        </div> -->
-        <div id="text-h1-block1">
-            <a class="h1">Добро пожаловать в <div class="animation">
-                <ul class="ul-word">
-                    <li>Yuamble</li>
-                    <li>Юамбль</li>
-                    <li>γιούαμβλ</li>
-                    <li>यूएमबीएल</li>
-                    <li>ಉಆಮಬೞ</li>
-                    <li>قمار</li>
-                </ul>
-            </div></a>
-            <br><br>
-            <a class="h2">Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений.</a>
-            <br>
-            <button class="button">Исследовать Yuamble</button>
-        </div>
+    <img class="image-start" src="../assets/images/start-ymb-illustration.png" alt="illustration of future with Yuamble">
+    <div class="text-h1-block1">
+        <a class="h1-pre-title">Добро пожаловать в <div class="animation">
+            <ul class="ul-word">
+                <li>Yuamble</li>
+                <li>Юамбль</li>
+                <li>γιούαμβλ</li>
+                <li>यूएमबीएल</li>
+                <li>ಉಆಮಬೞ</li>
+                <li>قمار</li>
+            </ul>
+        </div></a>
+        <br><br>
+        <a class="h2-pre-title">Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений.</a>
+        <br>
+        <button class="button">Исследовать Yuamble</button>
     </div>
 
     <div class="block-get-started">
         <div class="block-get-started-in-text">
-            <a class="h1-1">Начнем</a>
+            <a class="h1-block">Начнем</a>
             <br><br>
-            <a class="h2-2">yuamble.org — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите узнать больше про Yuamble? Вот что мы рекомендуем вам просмотреть, если вы хотите погрузиться. 👇</a>
+            <a class="h2-block">yuamble.org — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите узнать больше про Yuamble? Вот что мы рекомендуем вам просмотреть, если вы хотите погрузиться. 👇</a>
         </div>
         <img class="image-get-started" src="../assets/images/n5m5knWRx31r04068o1.png">
     </div>
@@ -110,9 +89,9 @@
         <div class="block3-in">
             <img class="image-2 device-image" src="../assets/images/6219.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-dark-1">В этом блокчейне нет комиссии. Даже скрытых</a>
+                <a class="h1-block">В этом блокчейне нет комиссии. Даже скрытых</a>
                 <br><br>
-                <a class="h2-dark-2">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунте. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
+                <a class="h2-block">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунте. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
                 <br>
                 <button class="button-2">Что такое блокчейн?</button>
             </div>
@@ -124,9 +103,9 @@
         <div class="block2-in">
             <img class="image-1" src="../assets/images/039bf262699271.5a986c977466f.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Создавайте смарт-контракты и подключайтесь безопасно к Интернету</a>
+                <a class="h1-block">Создавайте смарт-контракты и подключайтесь безопасно к Интернету</a>
                 <br><br>
-                <a class="h2-2">Используйте мощные инструменты блокчейна для создания смарт-контрактов и обеспечения их взаимодействия с Интернетом.</a>
+                <a class="h2-block">Используйте мощные инструменты блокчейна для создания смарт-контрактов и обеспечения их взаимодействия с Интернетом.</a>
                 <br>
                 <button class="button-2">Портал разработчика</button>
             </div>
@@ -137,9 +116,9 @@
         <div class="block3-in">
             <img class="image-2 device-image" src="../assets/images/abe31062699271.5a986c97787cf.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-dark-1">Сделайте мир более экологически чистым</a>
+                <a class="h1-block">Сделайте мир более экологически чистым</a>
                 <br><br>
-                <a class="h2-dark-2">Блокчейн Yuamble основан на алгоритме Proof-of-Stake (PoS), который приводит к снижению затрат на электроэнергию по сравнению с майнингом, таким как Биткойн или Эфириум.</a>
+                <a class="h2-block">Блокчейн Yuamble основан на алгоритме Proof-of-Stake (PoS), который приводит к снижению затрат на электроэнергию по сравнению с майнингом, таким как Биткойн или Эфириум.</a>
             </div>
             <img class="image-2 desktop-image" src="../assets/images/abe31062699271.5a986c97787cf.png">
         </div>
@@ -149,9 +128,9 @@
         <div class="block2-in">
             <img class="image-1" src="../assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Yuamble — это постквантовая криптовалюта</a>
+                <a class="h1-block">Yuamble — это постквантовая криптовалюта</a>
                 <br><br>
-                <a class="h2-2">Протокол Yuamble использует схему одноразовой подписи Винтерница (W-OTS), основанную на квантово-устойчивых хэш-функциях.</a>
+                <a class="h2-block">Протокол Yuamble использует схему одноразовой подписи Винтерница (W-OTS), основанную на квантово-устойчивых хэш-функциях.</a>
                 <br>
                 <button class="button-2">Больше о технологии</button>
             </div>
@@ -162,9 +141,9 @@
         <div class="block3-in">
             <img class="image-2 device-image" src="../assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-dark-1">Блокчейн Yuamble на базе DAG</a>
+                <a class="h1-block">Блокчейн Yuamble на базе DAG</a>
                 <br><br>
-                <a class="h2-dark-2">С помощью направленного ациклического графа (DAG) блокчейн Yuamble обрабатывает транзакции в сотни раз быстрее, чем Биткоин или Эфириум.</a>
+                <a class="h2-block">С помощью направленного ациклического графа (DAG) блокчейн Yuamble обрабатывает транзакции в сотни раз быстрее, чем Биткоин или Эфириум.</a>
                 <br>
                 <button class="button-2">Больше о технологии</button>
             </div>
@@ -176,9 +155,9 @@
         <div class="block2-in">
             <img class="image-1" src="../assets/images/0807d562699271.5a986c977528a.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Yuamble — перспективная криптовалюта</a>
+                <a class="h1-block">Yuamble — перспективная криптовалюта</a>
                 <br><br>
-                <a class="h2-2">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов. Узнайте вместе с нами, как получить Yuamble.</a>
+                <a class="h2-block">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов. Узнайте вместе с нами, как получить Yuamble.</a>
                 <br>
                 <button class="button-2">Получить Yuamble</button>
             </div>
@@ -194,8 +173,8 @@
                 <img class="image-3" src="../assets/images/57a.png">
             </div>
             <div style="margin: 40px 50px;">
-                <a class="h1-dark-1">Выбрать кошелек</a> <br><br>
-                <a class="h2-dark-2">Кошелек позволяет подключаться к Yuamble и управлять своими средствами.</a>
+                <a class="h1-block">Выбрать кошелек</a> <br><br>
+                <a class="h2-block">Кошелек позволяет подключаться к Yuamble и управлять своими средствами.</a>
             </div>
         </div>
         <div class="menu-block">
@@ -206,14 +185,14 @@
                 <img class="image-3" src="../assets/images/57b.png">
             </div>
             <div style="margin: 40px 50px;">
-                <a class="h1-dark-1">Получить Yuamble</a> <br><br>
-                <a class="h2-dark-2">YMB — это валюта Yuamble, которую можно использовать в децентрализованных приложениях.</a>
+                <a class="h1-block">Получить Yuamble</a> <br><br>
+                <a class="h2-block">YMB — это валюта Yuamble, которую можно использовать в децентрализованных приложениях.</a>
             </div>
         </div>
     </div>
     <div class="block-table">
-        <a class="h1-1">Yuamble сегодня</a><br>
-        <a class="h2-2">Самая последняя статистика сети</a><br><br>
+        <a class="h1-block">Yuamble сегодня</a><br>
+        <a class="h2-block">Самая последняя статистика сети</a><br><br>
         <div class="table">
             <div class="table-in">
                 <div style="display: grid;">
@@ -248,9 +227,9 @@
     <div class="block2">
         <div class="block-contribute">
             <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Сделайте вклад в yuamble.org</a>
+                <a class="h1-block">Сделайте вклад в yuamble.org</a>
                 <br><br>
-                <a class="h2-2">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете предлагать изменения к любому контенту на этом сайте, предлагать новые функции или помогать нам устранять ошибки.</a>
+                <a class="h2-block">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете предлагать изменения к любому контенту на этом сайте, предлагать новые функции или помогать нам устранять ошибки.</a>
                 <br>
                 <button class="button-3">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" id="button-github" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -263,7 +242,7 @@
         </div>
     </div>
     <div class="update-links">
-        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: white;">
+        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: #1c1c1c;">
             Последнее обновление сайта: 30 января 2022</a></div>
         <div>
             <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
