--- a/index.html
+++ b/index.html
@@ -21,28 +21,17 @@
 <div style="margin: 0px auto; max-width: 1450px;">
     <div class="pre-header">
         <div class="header">
-            <a class="logo-text" href="https://yuamble.org">Yuamble</a>
+            <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
             <div class="menu-header">
                 <a class="h-menu">Use Yuamble</a>
                 <a class="h-menu">Learn</a>
-                <a class="h-menu">Developers</a>
+                <a href="/developers" class="h-menu">Developers</a>
             </div>
             <div class="hat_text">
-                <a id="hat"><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="icon-lang" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path></svg></a>
-                <ul class="dropdown_items">
-                    <li class="dropdown_item_in"><a style="
-                    font-family: system-ui, 'Rubik Light', 'Balgin Light Sm Condensed', 'Rubik Light', serif;
-                    font-size: 18px;
-                    color: #242424;
-                    font-weight: 400;
-                    text-decoration: none" href="./">English</a></li>
-                    <li class="dropdown_item_in"><a style="
-                    font-family: system-ui, 'Rubik Light', 'Balgin Light Sm Condensed', 'Rubik Light', serif;
-                    font-size: 18px;
-                    color: #242424;
-                    font-weight: 400;
-                    text-decoration: none" href="./ru">Русский</a></li>
-                </ul>
+                <a id="hat" class="h-menu languages-text" href="/languages">
+                    <svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" class="icon-lang" height="24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm6.93 6h-2.95c-.32-1.25-.78-2.45-1.38-3.56 1.84.63 3.37 1.91 4.33 3.56zM12 4.04c.83 1.2 1.48 2.53 1.91 3.96h-3.82c.43-1.43 1.08-2.76 1.91-3.96zM4.26 14C4.1 13.36 4 12.69 4 12s.1-1.36.26-2h3.38c-.08.66-.14 1.32-.14 2 0 .68.06 1.34.14 2H4.26zm.82 2h2.95c.32 1.25.78 2.45 1.38 3.56-1.84-.63-3.37-1.9-4.33-3.56zm2.95-8H5.08c.96-1.66 2.49-2.93 4.33-3.56C8.81 5.55 8.35 6.75 8.03 8zM12 19.96c-.83-1.2-1.48-2.53-1.91-3.96h3.82c-.43 1.43-1.08 2.76-1.91 3.96zM14.34 14H9.66c-.09-.66-.16-1.32-.16-2 0-.68.07-1.35.16-2h4.68c.09.65.16 1.32.16 2 0 .68-.07 1.34-.16 2zm.25 5.56c.6-1.11 1.06-2.31 1.38-3.56h2.95c-.96 1.65-2.49 2.93-4.33 3.56zM16.36 14c.08-.66.14-1.32.14-2 0-.68-.06-1.34-.14-2h3.38c.16.64.26 1.31.26 2s-.1 1.36-.26 2h-3.38z"></path></svg>
+                    Languages
+                </a>
             </div>
             <div class="menu-button">
                 <div class="menu-button-burger"></div>
@@ -52,12 +41,7 @@
             <a class="menu-mobile-text">Use Yuamble</a>
             <a class="menu-mobile-text">Learn</a>
             <a class="menu-mobile-text">Developers</a>
-            <!-- <div style="display: flex; padding-top: 10px; padding-bottom: 10px; padding-right: 15px; padding-left: 15px; border: solid 1px#d9e021; width: fit-content;"> -->
-            <div style="display: flex;">
-                <a class="menu-mobile-text" href="./">EN</a>
-                <div style="width: 20px;"></div>
-                <a class="menu-mobile-text" href="./ru">RU</a>
-            </div>
+            <a class="menu-mobile-text">Languages</a>
             <div>
                 <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -74,35 +58,29 @@
             </div>
         </div>
     </div>
-    <div class="block1">
-        <!-- <div>
-            <img class="logo-image-div-device" id="logo-image-div2-device" src="assets/images/Yuamble_2021_logo.svg">
-            <img class="logo-image-div" id="logo-image-div1" src="assets/images/Yuamble_2021.svg">
-            <img class="logo-image-div" id="logo-image-div2" src="assets/images/Yuamble_2021_logo.svg">
-        </div> -->
-        <div id="text-h1-block1">
-            <a class="h1">Welcome to <div class="animation">
-                <ul class="ul-word">
-                    <li>Yuamble</li>
-                    <li>Юамбль</li>
-                    <li>γιούαμβλ</li>
-                    <li>यूएमबीएल</li>
-                    <li>ಉಆಮಬೞ</li>
-                    <li>قمار</li>
-                </ul>
-            </div></a>
-            <br><br>
-            <a class="h2">Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications.</a>
-            <br>
-            <button class="button">Explore Yuamble</button>
-        </div>
+    <img class="image-start" src="assets/images/start-ymb-illustration.png" alt="illustration of future with Yuamble">
+    <div class="text-h1-block1">
+        <a class="h1-pre-title">Welcome to <div class="animation">
+            <ul class="ul-word">
+                <li>Yuamble</li>
+                <li>Юамбль</li>
+                <li>γιούαμβλ</li>
+                <li>यूएमबीएल</li>
+                <li>ಉಆಮಬೞ</li>
+                <li>قمار</li>
+            </ul>
+        </div></a>
+        <br><br>
+        <a class="h2-pre-title">Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications.</a>
+        <br>
+        <button class="button">Explore Yuamble</button>
     </div>
 
     <div class="block-get-started">
         <div class="block-get-started-in-text">
-            <a class="h1-1">Get started</a>
+            <a class="h1-block">Get started</a>
             <br><br>
-            <a class="h2-2">yuamble.org is your portal into the world of Yuamble. The tech is new and ever-evolving – it helps to have a guide. Here's what we recommend you do if you want to dive in.</a>
+            <a class="h2-block">yuamble.org is your portal into the world of Yuamble. The tech is new and ever-evolving – it helps to have a guide. Here's what we recommend you do if you want to dive in.</a>
         </div>
         <img class="image-get-started" src="assets/images/n5m5knWRx31r04068o1.png">
     </div>
@@ -111,9 +89,9 @@
         <div class="block3-in">
             <img class="image-2 device-image" src="assets/images/6219.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-dark-1">This blockchain has no fees. Not even hidden ones</a>
+                <a class="h1-block">This blockchain has no fees. Not even hidden ones</a>
                 <br><br>
-                <a class="h2-dark-2">We want to make it easier to pay down your balance, not harder. So Yuamble doesn’t have any fees. Really. Blockchain should work for you, not against you.</a>
+                <a class="h2-block">We want to make it easier to pay down your balance, not harder. So Yuamble doesn’t have any fees. Really. Blockchain should work for you, not against you.</a>
                 <br>
                 <button class="button-2">What is blockchain?</button>
             </div>
@@ -125,9 +103,9 @@
         <div class="block2-in">
             <img class="image-1" src="assets/images/039bf262699271.5a986c977466f.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Make smart contracts and connect to public Internet</a>
+                <a class="h1-block">Make smart contracts and connect to public Internet</a>
                 <br><br>
-                <a class="h2-2">Use powerful blockchain tools to create smart contracts and secure their interaction with the outside world - the Internet.</a>
+                <a class="h2-block">Use powerful blockchain tools to create smart contracts and secure their interaction with the outside world - the Internet.</a>
                 <br>
                 <button class="button-2">Developer portal</button>
             </div>
@@ -138,9 +116,9 @@
         <div class="block3-in">
             <img class="image-2 device-image" src="assets/images/abe31062699271.5a986c97787cf.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-dark-1">Create world more environmentally friendly</a>
+                <a class="h1-block">Create world more environmentally friendly</a>
                 <br><br>
-                <a class="h2-dark-2">The Yuamble blockchain is based on a proof-of-stake (PoS) algorithm, which leads to a decrease in electricity costs compared to mining, like Bitcoin or Ethereum.</a>
+                <a class="h2-block">The Yuamble blockchain is based on a proof-of-stake (PoS) algorithm, which leads to a decrease in electricity costs compared to mining, like Bitcoin or Ethereum.</a>
             </div>
             <img class="image-2 desktop-image" src="assets/images/abe31062699271.5a986c97787cf.png">
         </div>
@@ -150,9 +128,9 @@
         <div class="block2-in">
             <img class="image-1" src="assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Yuamble is a post-quantum cryptocurrency</a>
+                <a class="h1-block">Yuamble is a post-quantum cryptocurrency</a>
                 <br><br>
-                <a class="h2-2">The Yuamble protocol uses the Winternitz One-Time Signature Scheme (W-OTS), based on quantum-resistant hash functions.</a>
+                <a class="h2-block">The Yuamble protocol uses the Winternitz One-Time Signature Scheme (W-OTS), based on quantum-resistant hash functions.</a>
                 <br>
                 <button class="button-2">More about features</button>
             </div>
@@ -163,9 +141,9 @@
         <div class="block3-in">
             <img class="image-2 device-image" src="assets/images/a64726_0140d734554844bbafa2a5c1519582f2_mv2.png">
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-dark-1">Yuamble blockchain powered by DAG</a>
+                <a class="h1-block">Yuamble blockchain powered by DAG</a>
                 <br><br>
-                <a class="h2-dark-2">With the Directed Acyclic Graph (DAG), the Yuamble blockchain processes transactions hundreds of times faster than Bitcoin or Ethereum.</a>
+                <a class="h2-block">With the Directed Acyclic Graph (DAG), the Yuamble blockchain processes transactions hundreds of times faster than Bitcoin or Ethereum.</a>
                 <br>
                 <button class="button-2">More about technology</button>
             </div>
@@ -176,13 +154,12 @@
     <div class="block2">
         <div class="block2-in">
             <img class="image-1" src="assets/images/0807d562699271.5a986c977528a.png">
-            <!-- <img class="image-1" src="assets/images/a64726_6acb574b97aa48709114ffe6b3c34d45_mv2.png"> -->
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Yuamble is a promising cryptocurrency</a>
+                <a class="h1-block">Yuamble is a promising cryptocurrency</a>
                 <br><br>
-                <a class="h2-2">Yuamble is a very promising cryptocurrency and offers great opportunities in the field of blockchain and decentralized finance. Find out with us how to get Yuamble.</a>
+                <a class="h2-block">Yuamble is a very promising cryptocurrency and offers great opportunities in the field of blockchain and decentralized finance. Find out with us how to get Yuamble.</a>
                 <br>
-                <button class="button-2">Get Yuamble</button>
+                <button class="button-2">Получить Yuamble</button>
             </div>
         </div>
     </div>
@@ -196,8 +173,8 @@
                 <img class="image-3" src="assets/images/57a.png">
             </div>
             <div style="margin: 40px 50px;">
-                <a class="h1-dark-1">Pick a wallet</a> <br><br>
-                <a class="h2-dark-2">A wallet lets you connect to Yuamble and manage your funds.</a>
+                <a class="h1-block">Pick a wallet</a> <br><br>
+                <a class="h2-block">A wallet lets you connect to Yuamble and manage your funds.</a>
             </div>
         </div>
         <div class="menu-block">
@@ -208,14 +185,14 @@
                 <img class="image-3" src="assets/images/57b.png">
             </div>
             <div style="margin: 40px 50px;">
-                <a class="h1-dark-1">Get Yuamble</a> <br><br>
-                <a class="h2-dark-2">YMB is the currency of Yuamble – you can use it in applications.</a>
+                <a class="h1-block">Get Yuamble</a> <br><br>
+                <a class="h2-block">YMB is the currency of Yuamble – you can use it in applications.</a>
             </div>
         </div>
     </div>
     <div class="block-table">
-        <a class="h1-1">Yuamble today</a><br>
-        <a class="h2-2">The latest network statistics</a><br><br>
+        <a class="h1-block">Yuamble today</a><br>
+        <a class="h2-block">The latest network statistics</a><br><br>
         <div class="table">
             <div class="table-in">
                 <div style="display: grid;">
@@ -250,9 +227,9 @@
     <div class="block2">
         <div class="block-contribute">
             <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
-                <a class="h1-1">Contribute to yuamble.org</a>
+                <a class="h1-block">Contribute to yuamble.org</a>
                 <br><br>
-                <a class="h2-2">This website is open source with hundreds of community contributors. You can propose edits to any of the content on this site, suggest awesome new features, or help us squash bugs.</a>
+                <a class="h2-block">This website is open source with hundreds of community contributors. You can propose edits to any of the content on this site, suggest awesome new features, or help us squash bugs.</a>
                 <br>
                 <button class="button-3">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" id="button-github" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -265,9 +242,8 @@
         </div>
     </div>
     <div class="update-links">
-        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: white;">
-            Website last updated: September 9, 2021</a>
-        </div>
+        <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: #1c1c1c;">
+            Website last updated: February 2, 2021</a></div>
         <div>
             <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                 <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
@@ -312,6 +288,6 @@
         </div>
     </footer>
 </div>
-<script src="index.js" rel="script"></script>
+<script src="/index.js" rel="script"></script>
 </body>
 </html>
