--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <img class="image-start" src="assets/images/start-ymb-illustration.png" alt="illustration of future with Yuamble">
+    <img class="image-start" src="assets/images/start-ymb-illustration-wide.png" alt="illustration of future with Yuamble">
     <div class="text-h1-block1">
         <a class="h1-pre-title">Welcome to <div class="animation">
             <ul class="ul-word">
@@ -71,7 +71,7 @@
             </ul>
         </div></a>
         <br><br>
-        <a class="h2-pre-title">Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications.</a>
+        <a class="h2-pre-title">Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications.</a>
         <br>
         <button class="button">Explore Yuamble</button>
     </div>
