--- a/ru/index.html
+++ b/ru/index.html
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-    <img class="image-start" src="../assets/images/start-ymb-illustration.png" alt="illustration of future with Yuamble">
+    <img class="image-start" src="../assets/images/start-ymb-illustration-wide.png" alt="illustration of future with Yuamble">
     <div class="text-h1-block1">
         <a class="h1-pre-title">Добро пожаловать в <div class="animation">
             <ul class="ul-word">
@@ -71,7 +71,8 @@
             </ul>
         </div></a>
         <br><br>
-        <a class="h2-pre-title">Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений.</a>
+        <a class="h2-pre-title">Yuamble — это первый в мире блокчейн смарт-контрактов без комиссий, с выходом в Интернет,
+            криптовалютой yuamba (YMB) и децентрализованными приложениями.</a>
         <br>
         <button class="button">Исследовать Yuamble</button>
     </div>
@@ -80,7 +81,8 @@
         <div class="block-get-started-in-text">
             <a class="h1-block">Начнем</a>
             <br><br>
-            <a class="h2-block">yuamble.org — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите узнать больше про Yuamble? Вот что мы рекомендуем вам просмотреть, если вы хотите погрузиться. 👇</a>
+            <a class="h2-block">yuamble.org — ваш портал в мир Yuamble. Технология новая, постоянно развивается. Хотите
+                узнать больше про Yuamble? Вот что мы рекомендуем вам просмотреть, если вы хотите погрузиться. 👇</a>
         </div>
         <img class="image-get-started" src="../assets/images/n5m5knWRx31r04068o1.png">
     </div>
@@ -91,7 +93,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">В этом блокчейне нет комиссии. Даже скрытых</a>
                 <br><br>
-                <a class="h2-block">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунте. Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
+                <a class="h2-block">Мы хотим упростить, а не усложнить проведение вами транзакций в вашем аккаунте.
+                    Таким образом, Yuamble не взимает никаких сборов. Блокчейн должен работать на вас, а не против вас.</a>
                 <br>
                 <button class="button-2">Что такое блокчейн?</button>
             </div>
@@ -105,7 +108,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Создавайте смарт-контракты и подключайтесь безопасно к Интернету</a>
                 <br><br>
-                <a class="h2-block">Используйте мощные инструменты блокчейна для создания смарт-контрактов и обеспечения их взаимодействия с Интернетом.</a>
+                <a class="h2-block">Используйте мощные инструменты блокчейна для создания смарт-контрактов и обеспечения
+                    их взаимодействия с Интернетом.</a>
                 <br>
                 <button class="button-2">Портал разработчика</button>
             </div>
@@ -118,7 +122,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Сделайте мир более экологически чистым</a>
                 <br><br>
-                <a class="h2-block">Блокчейн Yuamble основан на алгоритме Proof-of-Stake (PoS), который приводит к снижению затрат на электроэнергию по сравнению с майнингом, таким как Биткойн или Эфириум.</a>
+                <a class="h2-block">Блокчейн Yuamble основан на алгоритме Proof-of-Stake (PoS), который приводит к
+                    снижению затрат на электроэнергию по сравнению с майнингом, таким как Биткойн или Эфириум.</a>
             </div>
             <img class="image-2 desktop-image" src="../assets/images/abe31062699271.5a986c97787cf.png">
         </div>
@@ -130,7 +135,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble — это постквантовая криптовалюта</a>
                 <br><br>
-                <a class="h2-block">Протокол Yuamble использует схему одноразовой подписи Винтерница (W-OTS), основанную на квантово-устойчивых хэш-функциях.</a>
+                <a class="h2-block">Протокол Yuamble использует схему одноразовой подписи Винтерница (W-OTS), основанную
+                    на квантово-устойчивых хэш-функциях.</a>
                 <br>
                 <button class="button-2">Больше о технологии</button>
             </div>
@@ -143,7 +149,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Блокчейн Yuamble на базе DAG</a>
                 <br><br>
-                <a class="h2-block">С помощью направленного ациклического графа (DAG) блокчейн Yuamble обрабатывает транзакции в сотни раз быстрее, чем Биткоин или Эфириум.</a>
+                <a class="h2-block">С помощью направленного ациклического графа (DAG) блокчейн Yuamble обрабатывает
+                    транзакции в сотни раз быстрее, чем Биткоин или Эфириум.</a>
                 <br>
                 <button class="button-2">Больше о технологии</button>
             </div>
@@ -157,7 +164,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-left: 80px; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Yuamble — перспективная криптовалюта</a>
                 <br><br>
-                <a class="h2-block">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна и децентрализованных финансов. Узнайте вместе с нами, как получить Yuamble.</a>
+                <a class="h2-block">Yuamble очень перспективная криптовалюта и дает большие возможности в сфере блокчейна
+                    и децентрализованных финансов. Узнайте вместе с нами, как получить Yuamble.</a>
                 <br>
                 <button class="button-2">Получить Yuamble</button>
             </div>
@@ -186,7 +194,8 @@
             </div>
             <div style="margin: 40px 50px;">
                 <a class="h1-block">Получить Yuamble</a> <br><br>
-                <a class="h2-block">YMB — это валюта Yuamble, которую можно использовать в децентрализованных приложениях.</a>
+                <a class="h2-block">YMB — это валюта Yuamble, которую можно использовать в децентрализованных
+                    приложениях.</a>
             </div>
         </div>
     </div>
@@ -197,7 +206,8 @@
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">YMB ЦЕНА (USD)</a>
-                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0.000000000000000001 — вам не нужно покупать целый YMB.</a>
+                    <a class="h-table-2">Актуальная цена за 1 YMB. Вы можете купить всего 0.000000000000000001 —
+                        вам не нужно покупать целый YMB.</a>
                 </div>
                 <a class="h-max" id="ymb-price">$0</a>
             </div>
@@ -211,7 +221,8 @@
             <div class="table-in">
                 <div style="display: grid;">
                     <a class="h-table-1">СТОИМОСТЬ, ЗАБЛОКИРОВАННАЯ В DEFI (USD)</a>
-                    <a class="h-table-2">Количество денег в приложениях децентрализованного финансирования (defi), цифровая экономика Yuamble.</a>
+                    <a class="h-table-2">Количество денег в приложениях децентрализованного финансирования (defi),
+                        цифровая экономика Yuamble.</a>
                 </div>
                 <a class="h-max" id="value-locked">$0</a>
             </div>
@@ -229,7 +240,8 @@
             <div style="margin-top: auto; margin-bottom: auto; padding-right: 60px; padding-top: 80px; padding-bottom: 80px;">
                 <a class="h1-block">Сделайте вклад в yuamble.org</a>
                 <br><br>
-                <a class="h2-block">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете предлагать изменения к любому контенту на этом сайте, предлагать новые функции или помогать нам устранять ошибки.</a>
+                <a class="h2-block">Этот веб-сайт с открытым исходным кодом и сотнями участников сообщества. Вы можете
+                    предлагать изменения к любому контенту на этом сайте, предлагать новые функции или помогать нам устранять ошибки.</a>
                 <br>
                 <button class="button-3">
                     <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" id="button-github" height="24" width="24" xmlns="http://www.w3.org/2000/svg">
