--- a/languages/index.html
+++ b/languages/index.html
@@ -3,21 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Languages | Yuamble</title>
-    <meta name="Description" content="Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications." data-react-helmet="true">
+    <meta name="Description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications." data-react-helmet="true">
     <meta name="author" content="yuamble.org">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Home | Yuamble"/>
+    <meta property="og:title" content="Languages | Yuamble"/>
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Home | Yuamble">
+    <meta property="og:site_name" content="Languages | Yuamble">
     <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
-    <meta property="og:description" content="Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications."/>
+    <meta property="og:description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <link rel="stylesheet" href="../stylesheet.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" href="https://yuamble.org/favicon.ico">
     <link rel="shortcut icon" href="https://yuamble.org/favicon.ico">
 </head>
 <body>
+<div style="margin: 0px auto; max-width: 1450px;">
 <div class="pre-header">
     <div class="header">
         <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
@@ -57,5 +58,7 @@
         </div>
     </div>
 </div>
+</div>
+<script src="../index.js" rel="script"></script>
 </body>
 </html>
