--- a/ru/index.html
+++ b/ru/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Главная | Yuamble</title>
-    <meta name="Description" content="Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений." data-react-helmet="true">
+    <meta name="Description" content="Yuamble — это первый в мире блокчейн смарт-контрактов без комиссий, с выходом в Интернет, криптовалютой yuamba (YMB) и децентрализованными приложениями." data-react-helmet="true">
     <meta name="author" content="yuamble.org">
     <meta name="keywords" content="юамбль, юамба, блокчейн, криптовалюта, крипто, валюта">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Главная | Yuamble">
     <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
-    <meta property="og:description" content="Yuamble — это блокчейн смарт-контрактов, безопасного Интернета, криптовалюты yuamba (YMB) и тысяч децентрализованных приложений."/>
+    <meta property="og:description" content="Yuamble — это первый в мире блокчейн смарт-контрактов без комиссий, с выходом в Интернет, криптовалютой yuamba (YMB) и децентрализованными приложениями."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="../stylesheet.css">
     <link rel="icon" href="https://yuamble.org/favicon.ico">
