--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Home | Yuamble</title>
-    <meta name="Description" content="Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications." data-react-helmet="true">
+    <meta name="Description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications." data-react-helmet="true">
     <meta name="author" content="yuamble.org">
     <meta name="keywords" content="yuamble, yuamba, blockchain, crypto, currency">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Home | Yuamble">
     <meta property="og:image" content="https://yuamble.org/assets/images/favicon-32x32.png"/>
-    <meta property="og:description" content="Yuamble is a blockchain of smart contracts, safe Internet, cryptocurrency yuamba (YMB) and thousands of decentralized applications."/>
+    <meta property="og:description" content="Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications."/>
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="icon" href="https://yuamble.org/favicon.ico">
