--- a/ru/index.html
+++ b/ru/index.html
@@ -64,6 +64,7 @@
             <ul class="ul-word">
                 <li>Yuamble</li>
                 <li>Юамбль</li>
+                <li>于安布勒</li>
                 <li>γιούαμβλ</li>
                 <li>यूएमबीएल</li>
                 <li>ಉಆಮಬೞ</li>
