--- a/learn/index.html
+++ b/learn/index.html
@@ -190,7 +190,7 @@
             <div class="table-in-2-in">
                 <a class="h-table-1">DeFi</a>
                 <a class="h-table-2">Dive in DeFi — decentralized finance. With this tool you can borrow,
-                    lend and swap money without third party. Get more about DeFi</a>
+                    lend and swap money without third party. Get more about DeFi.</a>
             </div>
         </div>
     </div>
