--- a/ru/index.html
+++ b/ru/index.html
@@ -256,7 +256,7 @@
     </div>
     <div class="update-links">
         <div><a style="font-family: system-ui, 'Balgin Semi Bold', 'Rubik Semi Bold', serif; font-size: 14px; font-weight: 400; color: #1c1c1c;">
-            Последнее обновление сайта: 30 января 2022</a></div>
+            Последнее обновление сайта: 2 февраля 2022</a></div>
         <div>
             <a href="https://github.com/yuamble/new-yuamble-website" target="_blank" rel="noopener noreferrer" style="text-decoration: none">
                 <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 496 512" class="icon-link" height="36" width="36" xmlns="http://www.w3.org/2000/svg">
